--- a/index.html
+++ b/index.html
@@ -1,59 +1,53 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <title>daniinigogarcia98</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guía de Instalación de Windows en VirtualBox</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .carousel-inner img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">Guía VirtualBox</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="instalacion.html"><i class="bi bi-laptop"></i> Instalación</a></li>
+                <li class="nav-item"><a class="nav-link" href="tips.html"><i class="bi bi-lightbulb"></i> Tips y Trucos</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacto.html"><i class="bi bi-person"></i> Contacto</a></li>
+            </ul>
+        </div>
+    </nav>
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-    </head>
+    <!-- Sección Principal con Contenido Dinámico -->
+    <div class="container my-5">
+        <h2 class="text-center">Bienvenido a la Guía de VirtualBox</h2>
+        <div id="dynamicContent" class="my-4">
+            <!-- Aquí se cargará el contenido dinámico usando JavaScript -->
+        </div>
+    </div>
 
-    <body>
-        <header>
-            <nav
-                class="nav justify-content-center flex-column"
-            >
-                <a class="nav-link active" href="#" aria-current="page"
-                    >Active link</a
-                >
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link disabled" href="#">Disabled link</a>
-            </nav>
-            
-        </header>
-        <main>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h1>daniinigogarcia98</h1>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer>
-            &copy; 2023 daniinigogarcia98
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 daniinigogarcia98. Todos los derechos reservados.</p>
+    </footer>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <!-- Scripts de Bootstrap 5 -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <!-- Script para Cargar Contenido Dinámico -->
+    <script src="js/index.js"></script>
+</body>
 </html>
