--- a/instalacion.html
+++ b/instalacion.html
@@ -6,8 +6,10 @@
     <title>Instalación de Windows en VirtualBox</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Guía VirtualBox</a>
         <div class="collapse navbar-collapse">
@@ -19,36 +21,123 @@
         </div>
     </nav>
 
-    <section class="container my-5">
-        <h2 class="text-center"><i class="bi bi-laptop"></i> Instalación de Windows en VirtualBox</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <p>Para instalar Windows en VirtualBox, sigue estos pasos:</p>
-                <ol>
-                    <li>Descargar e instalar VirtualBox desde el sitio oficial.</li>
-                    <li>Crear una nueva máquina virtual y seleccionar Windows como sistema operativo.</li>
-                    <li>Asignar memoria RAM y configurar el disco duro virtual.</li>
-                    <li>Iniciar la máquina virtual e insertar el archivo ISO de Windows.</li>
-                    <li>Completar la instalación de Windows como lo harías normalmente en una PC física.</li>
-                </ol>
-            </div>
-            <div class="col-md-6">
-                <img src="https://www.virtualbox.org/graphics/virtualbox_logo.png" alt="VirtualBox" class="img-fluid" />
-            </div>
-        </div>
-        <h4>Enlaces útiles</h4>
+    <!-- Barra lateral -->
+    <div class="sidebar">
+        <h5>Pasos de Instalación</h5>
         <ul>
-            <li><a href="https://www.virtualbox.org/wiki/Downloads" target="_blank">Descargar VirtualBox</a></li>
-            <li><a href="https://www.virtualbox.org/manual/ch01.html" target="_blank">Manual de Usuario de VirtualBox</a></li>
+            <li><a href="#step1">1. Descargar VirtualBox</a></li>
+            <ul>
+                <li><a href="#step1_1">1.1 Windows</a></li>
+                <li><a href="#step1_2">1.2 Linux</a></li>
+                <li><a href="#step1_3">1.3 macOS</a></li>
+            </ul>
+            <li><a href="#step2">2. Crear una máquina virtual</a></li>
+            <ul>
+                <li><a href="#step2_1">2.1 Configuración de Windows</a></li>
+                <li><a href="#step2_2">2.2 Configuración de Linux</a></li>
+            </ul>
+            <li><a href="#step3">3. Instalar Sistema Operativo</a></li>
+            <ul>
+                <li><a href="#step3_1">3.1 Instalación de Windows</a></li>
+                <li><a href="#step3_2">3.2 Instalación de Linux</a></li>
+            </ul>
         </ul>
-    </section>
+    </div>
 
+    <!-- Contenido principal -->
+    <div class="content container my-5">
+        <h2 class="text-center">Guía de Instalación de Windows en VirtualBox</h2>
+
+        <!-- Paso 1 -->
+        <div id="step1">
+            <h3>1. Descargar VirtualBox</h3>
+            <p>Lo primero que debes hacer es descargar e instalar VirtualBox en tu computadora. Hazlo desde su sitio oficial.</p>
+            <ul>
+                <li><a href="https://www.virtualbox.org/wiki/Downloads" target="_blank">Descargar VirtualBox para Windows</a></li>
+                <li><a href="https://www.virtualbox.org/wiki/Linux_Downloads" target="_blank">Descargar VirtualBox para Linux</a></li>
+                <li><a href="https://www.virtualbox.org/wiki/Mac_OS_X_Downloads" target="_blank">Descargar VirtualBox para macOS</a></li>
+            </ul>
+            <img src="https://www.virtualbox.org/graphics/virtualbox_logo.png" alt="VirtualBox Logo">
+        </div>
+
+        <!-- Paso 1.1 -->
+        <div id="step1_1" style="display:none;">
+            <h3>1.1 Descargar VirtualBox en Windows</h3>
+            <p>Para Windows, selecciona la versión adecuada para tu sistema (32-bit o 64-bit) desde el sitio oficial de VirtualBox.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100347516-e48a1580-2ff0-11eb-9f92-daa8f5f0cdb0.png" alt="VirtualBox Windows Download">
+            <p>Una vez descargado, ejecuta el archivo y sigue el asistente de instalación.</p>
+        </div>
+
+        <!-- Paso 1.2 -->
+        <div id="step1_2" style="display:none;">
+            <h3>1.2 Descargar VirtualBox en Linux</h3>
+            <p>En Linux, VirtualBox se puede descargar mediante los paquetes oficiales de tu distribución o desde el sitio oficial de VirtualBox.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100347898-9c380500-2ff1-11eb-9c50-634d6e4b1f8a.png" alt="VirtualBox Linux Download">
+            <p>También puedes instalarlo utilizando el gestor de paquetes de tu distribución, como `sudo apt install virtualbox` en Ubuntu.</p>
+        </div>
+
+        <!-- Paso 1.3 -->
+        <div id="step1_3" style="display:none;">
+            <h3>1.3 Descargar VirtualBox en macOS</h3>
+            <p>En macOS, descarga el archivo DMG desde el sitio oficial. Haz doble clic en el archivo descargado para comenzar con la instalación.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100347899-9cd09b80-2ff1-11eb-9b66-91809cc885e9.png" alt="VirtualBox macOS Download">
+            <p>Sigue las instrucciones en pantalla para completar la instalación.</p>
+        </div>
+
+        <!-- Paso 2 -->
+        <div id="step2">
+            <h3>2. Crear una Máquina Virtual</h3>
+            <p>Una vez que hayas instalado VirtualBox, el siguiente paso es crear una máquina virtual para el sistema operativo que quieres instalar (Windows o Linux).</p>
+            <p>Asegúrate de asignar suficiente memoria RAM (al menos 2GB) y un disco duro virtual de al menos 20GB.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100348212-5f77fd00-2ff2-11eb-8e6e-92ff5a70f2f3.png" alt="Crear Máquina Virtual en VirtualBox">
+        </div>
+
+        <!-- Paso 2.1 -->
+        <div id="step2_1" style="display:none;">
+            <h3>2.1 Configuración de Windows</h3>
+            <p>Cuando crees la máquina virtual, selecciona "Microsoft Windows" como sistema operativo y elige la versión de Windows que vas a instalar (por ejemplo, Windows 10).</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100348323-90503900-2ff2-11eb-89f5-3fd8b88b928d.png" alt="Configuración Windows VirtualBox">
+        </div>
+
+        <!-- Paso 2.2 -->
+        <div id="step2_2" style="display:none;">
+            <h3>2.2 Configuración de Linux</h3>
+            <p>Si estás configurando Linux, selecciona la distribución adecuada en "Linux" y ajusta los parámetros según la recomendación de la distribución.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100348416-c0d07a00-2ff2-11eb-88e0-87d47efadf32.png" alt="Configuración Linux VirtualBox">
+        </div>
+
+        <!-- Paso 3 -->
+        <div id="step3">
+            <h3>3. Instalar Sistema Operativo</h3>
+            <p>Una vez que hayas configurado la máquina virtual, es hora de instalar el sistema operativo. Inserta el archivo ISO del sistema operativo que deseas instalar.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100348576-eaa1bf00-2ff2-11eb-88b6-e49f96dcbf2b.png" alt="Instalar Sistema Operativo en VirtualBox">
+        </div>
+
+        <!-- Paso 3.1 -->
+        <div id="step3_1" style="display:none;">
+            <h3>3.1 Instalación de Windows</h3>
+            <p>Para Windows, selecciona el disco duro virtual creado anteriormente e inserta el archivo ISO de Windows. Luego, sigue las instrucciones del asistente de instalación de Windows.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100348775-1a911300-2ff3-11eb-8970-fec522a0f13e.png" alt="Instalación Windows VirtualBox">
+        </div>
+
+        <!-- Paso 3.2 -->
+        <div id="step3_2" style="display:none;">
+            <h3>3.2 Instalación de Linux</h3>
+            <p>Para instalar Linux, selecciona el archivo ISO de la distribución y sigue el asistente de instalación, eligiendo las opciones adecuadas según tu preferencia.</p>
+            <img src="https://user-images.githubusercontent.com/41304065/100348986-54aa5500-2ff3-11eb-82fe-39f86e4d3b02.png" alt="Instalación Linux VirtualBox">
+        </div>
+    </div>
+
+    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 daniinigogarcia98. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Guía VirtualBox. Todos los derechos reservados.</p>
     </footer>
 
-
+    <!-- Scripts de Bootstrap y jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+    <!-- Script para Cargar Contenido Dinámico -->
+    <script src="js/instalacion.js"></script>
 </body>
 </html>
