cambios en footer

--- a/instalacion.html
+++ b/instalacion.html
@@ -130,7 +130,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Guía VirtualBox. Todos los derechos reservados.</p>
+        <p>&copy; 2025 daniinigogarcia98. Todos los derechos reservados.</p>
     </footer>
 
     <!-- Scripts de Bootstrap y jQuery -->
