--- a/instalacion.html
+++ b/instalacion.html
@@ -88,8 +88,12 @@
         <div id="step2">
             <h3>2. Crear una Máquina Virtual</h3>
             <p>Una vez que hayas instalado VirtualBox, el siguiente paso es crear una máquina virtual para el sistema operativo que quieres instalar (Windows o Linux).</p>
-            <p>Asegúrate de asignar suficiente memoria RAM (al menos 2GB) y un disco duro virtual de al menos 20GB.</p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Oracle_VirtualBox.png" alt="VirtualBox Machine Creation">
+            <p>Asegúrate de asignar suficiente memoria RAM (2GB para Linux) y (8GB o mas Para Windows 10/11) y un disco duro virtual de al menos 20GB para el sistema operativo que quieres instalar.</p>
+            <p>Para Windows 10/11 el disco duro debe ser entre 40GB y 80GB.</p>
+            <h2>Primer paso: Crear una máquina virtual</h2>
+            <p>Lo primero que debes hacer es crear una máquina virtual. Para ello, abre VirtualBox y selecciona "Crear máquina virtual" en el menú principal.</p>
+            <img src="" alt="VirtualBox Machine Creation" class="img-fluid">
+
         </div>
 
         <!-- Paso 2.1 -->
